PEH- 192, 219, 198 raw commit

--- a/force-app/main/default/classes/AccountSettingsController.cls
+++ b/force-app/main/default/classes/AccountSettingsController.cls
@@ -96,7 +96,7 @@ public without sharing class AccountSettingsController {
         return pContact;
     }
 
-    private static Contact getCurrentContact() {
+    public static Contact getCurrentContact() {
         return [
                 SELECT Id
                         , FirstName
