--- a/force-app/main/default/translations/ru.translation-meta.xml
+++ b/force-app/main/default/translations/ru.translation-meta.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Translations xmlns="http://soap.sforce.com/2006/04/metadata">
+    <customApplications>
+        <label><!-- Developer --></label>
+        <name>Developer</name>
+    </customApplications>
+    <customApplications>
+        <label><!-- IQVIA Referral Hub --></label>
+        <name>IQVIA_RR_CRM</name>
+    </customApplications>
     <customLabels>
         <label>Поздравляю ##UserName!
 
@@ -11,6 +19,10 @@
             Нажмите OK, чтобы начать!
         </label>
         <name>AL_Body_Welcome_Study</name>
+    </customLabels>
+    <customLabels>
+        <label><!-- AL_Body_Welcome_Study_Patient_Delegates --></label>
+        <name>AL_Body_Welcome_Study_Patient_Delegates</name>
     </customLabels>
     <customLabels>
         <label>Добро пожаловать на исследование!</label>
@@ -2597,6 +2609,10 @@
         <name>PG_PP_L_Patient_Profile</name>
     </customLabels>
     <customLabels>
+        <label>РАЗРЕШЕННЫЕ ДЕЙСТВИЯ</label>
+        <name>PG_PST_L_Delegate_Permitted</name>
+    </customLabels>
+    <customLabels>
         <label>Делегаты</label>
         <name>PG_PST_L_Delegates</name>
     </customLabels>
@@ -2619,6 +2635,10 @@
     <customLabels>
         <label>Завершать задания от моего имени</label>
         <name>PG_PST_L_Delegates_Compl_Task_Behalf</name>
+    </customLabels>
+    <customLabels>
+        <label>Делегат</label>
+        <name>PG_PST_L_Delegates_Delegate</name>
     </customLabels>
     <customLabels>
         <label>Просмотр моих измерений</label>
@@ -2647,6 +2667,10 @@
     <customLabels>
         <label>Просмотр моих жизненных показателей</label>
         <name>PG_PST_L_Delegates_See_Vitals</name>
+    </customLabels>
+    <customLabels>
+        <label>Вы успешно удалили своего делегата</label>
+        <name>PG_PST_L_Delegates_SuccRemove</name>
     </customLabels>
     <customLabels>
         <label>Моя команда</label>
@@ -3472,4 +3496,106 @@
         <label><!-- Study Export/Import --></label>
         <name>Translation_Import_Export</name>
     </customTabs>
+    <flowDefinitions>
+        <flows>
+            <fullName>Update_Site_RRR_Status-1</fullName>
+        </flows>
+        <fullName>Update_Site_RRR_Status</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Welcome_to_the_Study_Caregiver_Alert-1</fullName>
+        </flows>
+        <fullName>Welcome_to_the_Study_Caregiver_Alert</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Task_changes_status_to_Expired-1</fullName>
+        </flows>
+        <fullName>Task_changes_status_to_Expired</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Update_HCP_Status-1</fullName>
+        </flows>
+        <fullName>Update_HCP_Status</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Fill_Unique_Id_for_Terms_And_Conditions-1</fullName>
+        </flows>
+        <fullName>Fill_Unique_Id_for_Terms_And_Conditions</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>PSE_Creation-1</fullName>
+        </flows>
+        <fullName>PSE_Creation</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Create_Therapeutic_Area_Patient_from_PE-1</fullName>
+        </flows>
+        <fullName>Create_Therapeutic_Area_Patient_from_PE</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Create_Therapeutic_Area_Patient_from_PSE-1</fullName>
+        </flows>
+        <fullName>Create_Therapeutic_Area_Patient_from_PSE</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Alert_Welcome_to_the_Study_creation-1</fullName>
+        </flows>
+        <fullName>Alert_Welcome_to_the_Study_creation</fullName>
+    </flowDefinitions>
+    <quickActions>
+        <label><!-- Follow Up --></label>
+        <name>Follow_Up</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- LogACall --></label>
+        <name>LogACall</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewAccount --></label>
+        <name>NewAccount</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewCase --></label>
+        <name>NewCase</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewContact --></label>
+        <name>NewContact</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewEvent --></label>
+        <name>NewEvent</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewGroup --></label>
+        <name>NewGroup</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewLead --></label>
+        <name>NewLead</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewNote --></label>
+        <name>NewNote</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewOpportunity --></label>
+        <name>NewOpportunity</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewTask --></label>
+        <name>NewTask</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- SendEmail --></label>
+        <name>SendEmail</name>
+    </quickActions>
 </Translations>
