--- a/force-app/main/default/classes/PEStatusState.cls
+++ b/force-app/main/default/classes/PEStatusState.cls
@@ -51,6 +51,32 @@ public without sharing class PEStatusState {
     public static final String PE_STATUS_ENROLLMENT_SUCCESS= 'Enrollment Success';
     public static final String PE_STATUS_ENROLLMENT_FAILED = 'Enrollment Failed';
     
+    public static final String PE_STATUS_PENDING_REFERRAL = 'Pending Referral';
+    public static final String PE_STATUS_EXCLUDED_FROM_REFERRING = 'Excluded from Referring';
+    public static final String PE_STATUS_FAILED_REVIEW = 'Failed Review';
+    public static final String PE_STATUS_FAILED_REFERRAL = 'Failed Referral';
+    
+    //status groups:
+    public static final List<String> PE_STATUS_GROUP_FAILED = new List<String>{
+            PE_STATUS_REFERRAL_DECLINED,
+            PE_STATUS_CONTACT_FAILED,
+            PE_STATUS_ELIGIBILITY_FAILED,
+            PE_STATUS_SCREENING_FAILED,
+            PE_STATUS_ENROLLMENT_FAILED,
+            PE_STATUS_FAILED_REVIEW,
+            PE_STATUS_FAILED_REFERRAL
+    };
+    public static final List<String> PE_STATUS_GROUP_IN_PROGRESS = new List<String>{
+            PE_STATUS_REFERRAL_SENT_TO_PI,
+            PE_STATUS_REFERRAL_ACCEPTED,
+            PE_STATUS_REFERRAL_ON_HOLD,
+            PE_STATUS_CONTACT_SUCCESSFUL,
+            PE_STATUS_CONTACT_ATTEMPT_IN_PROGRESS,
+            PE_STATUS_ELIGIBILITY_PASSED,
+            PE_STATUS_SCREENING_COMPLETE,
+            PE_STATUS_SCREENING_IN_PROGRESS
+    };
+    
     // Table with data: Status Step -> available states and real statuses names
     public static List<StatusStep> STATUS_STEPS_TABLE = new List<StatusStep>{
             new StatusStep(PE_ST_REFERRED,
