--- a/force-app/main/default/classes/PSEService.cls
+++ b/force-app/main/default/classes/PSEService.cls
@@ -38,6 +38,7 @@ public without sharing class PSEService {
             'Participant__r.Mailing_Country__c',
             'Participant__r.Mailing_Country_Code__c',
             'Participant__r.Mailing_Zip_Postal_Code__c',
+            'Participant__r.Contact__c',
             'Participant_Enrollment__c',
             'Status__c',
             'Study_Site__c',
