--- a/force-app/main/default/classes/ParticipantService.cls
+++ b/force-app/main/default/classes/ParticipantService.cls
@@ -10,6 +10,7 @@ public class ParticipantService {
         @AuraEnabled public ParticipantStates value;
         @AuraEnabled public Participant_Enrollment__c pe;
         @AuraEnabled public Participant_Study_Enrollment__c pse;
+        @AuraEnabled public Boolean isDelegate;
         
         public ParticipantState(){
             value = ParticipantStates.PROSPECT;
@@ -21,6 +22,7 @@ public class ParticipantService {
         List<Participant_Enrollment__c> peList = ParticipantEnrollmentService.getParticipantEnrollmentsForParticipant();
         if(peList.size() >  0) {
             state.pe = peList[0];
+            state.isDelegate = state.pe.Participant__r.Contact__c != CommunityService.getUserContact().Id;
             if(PEStatusState.PE_STATUS_GROUP_FAILED.contains(state.pe.Participant_Status__c)){
                 state.value = ParticipantStates.ALUMNI;
             }else if(PEStatusState.PE_STATUS_GROUP_IN_PROGRESS.contains(state.pe.Participant_Status__c)){
@@ -30,6 +32,7 @@ public class ParticipantService {
                 List<Participant_Study_Enrollment__c> pseList = PSEService.getPSEListForParticipant();
                 if(pseList.size() > 0) {
                     state.pse = pseList[0];
+                    state.isDelegate = state.pse.Participant__r.Contact__c != CommunityService.getUserContact().Id;
                     if(PSEService.PSE_STATUS_GROUP_COMPLETE.contains(state.pse.Status__c)){
                         state.value = ParticipantStates.ALUMNI;
                     }
